# my-spatial-world

./: .gitignore  README.md  _quarto.yml  about.qmd  index.qmd  pyproject.toml
_freeze/projects/01_basic_mapping_with_OSM/execute-results/: html.json
_freeze/projects/02_parks_access/execute-results/: html.json
_freeze/projects/02_parks_comparison/execute-results/: html.json
_freeze/tutorials/01_py2r/execute-results/: html.json
_freeze/tutorials/02_duckdb_with_otm/execute-results/: html.json
docs/: about.html  index.html  search.json
docs/projects/: 01_basic_mapping_with_OSM.html  02_parks_comparison.html
docs/site_libs/bootstrap/: bootstrap-350277b54e5adb5f3740be1c22d380e0.min.css  bootstrap-58cf75aba0d8b4019f527fe632109df6.min.css  bootstrap-70b473cb0d4e092f7cf574d499ea8f71.min.css
docs/temp_files/: overture_landuse.html
docs/tutorials/: 00_create_folder.html  01_py2r.html  02_duckdb_with_otm.html
projects/: 01_basic_mapping_with_OSM.qmd  02_parks_comparison.qmd  1_basic_mapping_with_OSM.qmd
tutorials/: 00_create_folder.qmd  01_py2r.qmd  02_duckdb_with_otm.qmd  0_1_py2r.qmd  0_create_folder.qmd
