[project]
name = "spatial_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.7.0",
    "duckdb>=1.5.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "leafmap>=0.61.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "osmnx>=2.1.0",
    "plotly>=6.6.0",
    "pyarrow>=23.0.1",
    "pyproj>=3.7.2",
    "rasterio>=1.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
